--- a/style.css
+++ b/style.css
@@ -8,31 +8,62 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 header {
     width: 100%;
-    height: 40px;
+    height: 55px;
     background-color: lightblue;
     display: flex;
     flex-direction: row;
     align-items: center;
     position: fixed;
+    z-index: 1;
+    padding: 30px 0;
+    overflow: hidden;
 }
 
 header nav {
     width: 40%;
+    margin-left: 30px;
 }
 
 header nav ul {
     display: flex;
+
 }
 
 header nav ul li {
-    margin: 10px;
+    width: 120px;
+    height: 40px;
+    margin: 10px 10px;
+    border-radius: 5px;
     list-style-type: none;
+    transition: .4s linear;
 }
 
 header nav ul li a {
     text-decoration: none;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 9px;
+    color: rgba(0, 0, 0, 0.452);
+    transition: .4s linear;
+}
+
+header nav ul li:hover {
+    box-shadow: 2px 10px 25px rgba(0, 0, 0, 0.281);
+}
+
+header nav ul li:hover a {
     color: black;
 }
 
@@ -42,6 +73,9 @@ header nav ul li a {
 
 .logo h2 {
     margin-left: 100px;
+    font-size: 36px;
+    letter-spacing: 3px;
+    transition: 1s;
 }
 
 header .Search-Engine {
@@ -56,6 +90,8 @@ header .Search-Engine {
 section {
     width: 100%;
     height: 100vh;
+    background-color: #f3eadead;
+    overflow: hidden;
 }
 
 section .Home {
@@ -64,6 +100,8 @@ section .Home {
     background-image: url(https://ofisu.co.th/wp-content/uploads/2021/01/modern-living-room-interior-with-sofa-green-plants-lamp-table-dark-wall-background-scaled.jpg);
     background-size: cover;
     background-position: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: bisque;
 }
 
 .Home .col-6 {
@@ -87,46 +125,56 @@ section .Home {
 .col-6 button {
     margin-top: 10px;
     width: 120px;
-    height: 25px;
-    border: 1px solid blACK;
-    background-color: rgba(240, 248, 255, 0.17);
-    border-radius: 10px;
+    height: 35px;
+    border: 1px solid black;
+    background-color: lightblue;
+    border-radius: 50px;
     color: black;
-    font-weight: 500;
-    padding: 2px;
+    font-weight: 700;
+    padding: 6px;
+    transition: .4s;
 }
+
+.col-6 button:hover {
+    background-color: #00008b86;
+    color: white;
+    border: 2px solid white;
+}
+
 .about {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
-.heading-about{
+
+.heading-about {
     width: 100%;
     height: 20%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
 
+.heading-about p {
+    font-size: 17px;
+    margin-bottom: 10px;
 }
-.heading-about p{
-   font-size: 17px;
-   margin-bottom: 10px;
+
+.heading-about h2 {
+    font-size: 39px;
 }
-.heading-about h2{
-   font-size: 39px;
-}
-.about-images-collection{
+
+.about-images-collection {
     width: 100%;
     height: 80%;
-display: flex;
+    display: flex;
     flex-direction: row;
     justify-content: center;
-    
     align-items: center;
 }
-.product-item-box{
+.product-item-box {
     width: 320px;
     height: 320px;
     background-color: rgba(119, 136, 153, 0.192);
@@ -134,19 +182,27 @@ display: flex;
     border: 2px solid black;
     border-radius: 7px;
     overflow: hidden;
+    transition: .7s;
 }
-.img-item{
+.product-item-box:hover{
+    box-shadow: 0 0 30px black;
+}
+.img-item {
     width: 100%;
     height: 100%;
     background-size: cover;
+    overflow: hidden;
     background-position: center;
 }
-.img-item img{
+.img-item img {
     width: 100%;
     height: 100%;
-    
+    transition: .7s;
 }
-.item-name{
+.img-item img:hover {
+    transform: scale(1.1);
+}
+.item-name {
     position: relative;
     top: -70px;
     left: 15px;
@@ -155,10 +211,202 @@ display: flex;
     background-color: white;
     display: flex;
     justify-content: center;
-    align-items: center;  
+    align-items: center;
     border: 1px solid black;
 }
-.item-name h3{
-font-size: 22px;
-font-weight: 600;
+.item-name h3 {
+    font-size: 22px;
+    font-weight: 600;
 }
+/* collection Box */
+.box-collection {
+    width: 100%;
+    height: 100%;
+}
+.headerNAme {
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.headerNAme h2 {
+    font-size: 34px;
+    background-color: rgba(173, 216, 230, 0.24);
+    width: 100%;
+    text-align: center;
+    letter-spacing: 3px;
+    padding: 9px 8px;
+    font-weight: 800;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+.colection-type {
+    width: 100%;
+    height: 80%;
+}
+.colection-type .row-explorepage {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 100px;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.colection-type .row-explorepage .box-collection-item {
+    width: 300px;
+    height: 80%;
+    display: flex;
+    margin: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    transition: .4s;
+}
+.box-collection-item:hover {
+    background-color: lightgrey;
+    z-index: -1px;
+}
+
+.box-collection-item i {
+    font-size: 54px;
+    color: rgba(1, 1, 51, 0.849);
+    margin-bottom: 20px;
+}
+.box-collection-item p {
+    font-size: 28px;
+    color: rgba(0, 0, 0, 0.767);
+    margin-top: 3px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 700;
+}
+.information {
+    width: 100%;
+    height: 100%;
+    background-color: #f3eadead;
+    padding-top: 55px;
+
+}
+
+.information p {
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.information h2 {
+    text-align: center;
+    font-weight: 500;
+    margin-top: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 44px;
+}
+.information .row {
+    width: 100%;
+    padding: 0 120px;
+    margin-top: 100px;
+    height: 350px;
+    justify-content: space-around;
+
+}
+
+.information .row .services-box {
+    width: 300px;
+    height: 300px;
+    border: 1px solid rgba(0, 0, 0, 0.103);
+    flex-direction: column;
+    padding: 12px;
+    transition: .5s;
+}
+
+.services-box:hover {
+    animation: Zigzag .4s linear;
+    box-shadow: 0 0 20px black;
+    cursor: pointer;
+    background-color: lightgray;
+    z-index: -1px;
+}
+@keyframes Zigzag {
+    0% {
+        transform: translateY(0px);
+    }
+
+    50% {
+        transform: translateY(-5px);
+    }
+
+    100% {
+        transform: translateY(0px);
+    }
+}
+.services-box i {
+    font-size: 44px;
+    margin-bottom: 10px;
+}
+.services-box h3 {
+    font-size: 24px;
+}
+.services-box p {
+    font-size: 12px;
+    text-align: center;
+    margin-top: 10px;
+}
+.information footer {
+    width: 100%;
+    height: 375px;
+    background-color: lightgrey;
+    border-top: 2px solid rgba(0, 0, 0, 0.158);
+}
+.information footer .footer-partitions {
+    width: 50%;
+    height: 100%;
+    padding: 25px;
+}
+.footer-partitions h3 {
+    font-size: 24px;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    letter-spacing: 4px;
+    position: absolute;
+}
+.footer-partitions span {
+    position: relative;
+    top: 28px;
+    left: 90px;
+    letter-spacing: 3px;
+    font-weight: 500;
+}
+.footer-partitions .col-4 {
+    width: 33.33%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: start;
+}
+.footer-partitions .col-4 h4 {
+    font-size: 30px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 600;
+}
+.footer-partitions .col-4 a {
+    text-align: center;
+    text-decoration: none;
+    margin: 5px;
+    color: dimgray;
+    transition: .2s;
+}
+.footer-partitions .col-4 a:hover{
+    color: rgba(37, 19, 19, 0.966);
+    font-size: 20px;
+
+}
+/* .footer-border {
+    width: 100%;
+    height: 3px;
+    position: relative;
+    top: -10px;
+    background-color: black;
+    display: inline-block;
+} */
